fix: force left align on cards

--- a/src/index.less
+++ b/src/index.less
@@ -246,6 +246,7 @@
     .vault-list-item-header {
       .vault-name {
         float: left;
+        text-align: left;
       }
 
       .mint-price {
@@ -268,6 +269,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        text-align: left;
       }
 
       &::after {
